# Radio

./: .gitignore  CHANGES.md  LICENSE  QUICKSTART.md  README.md  build-deb.sh  pyproject.toml  setup.py
.pybuild/cpython3_3.12/: .pydistutils.cfg
data/: pyradio.desktop
deb-files/: pyradio_1.0.0-1_all.deb  pyradio_1.0.0-1_amd64.buildinfo  pyradio_1.0.0-1_amd64.changes
debian/: changelog  control  rules
pyradio/: __init__.py  __main__.py  config.py  favorites.py  main.py  player.py  station_fetcher.py
pyradio/ui/: __init__.py  main_window.py  now_playing.py  station_list.py
